# stormtide

./: .editorconfig  .gitignore  Cargo.toml  README.md  package-lock.json  package.json
client/: index.html  index.js
client/components/: Card.js  CombatState.js  DebugActions.js  ManaPool.js  PlayerPanel.js  Steps.js
crates/mtg/: .gitignore  Cargo.toml  package-lock.json  package.json
crates/mtg-eframe/: Cargo.toml
crates/mtg-eframe/src/: main.rs
crates/mtg-yew/: Cargo.toml  global.css  index.html
crates/mtg-yew/src/: main.rs  symbols.rs
crates/mtg-yew/src/components/: card.rs  structure.rs
crates/mtg/js/: index.css  index.html  index.js
crates/mtg/js/components/: Card.js  DebugActions.js  GameRoot.js  PlayerPanel.js  StackWindow.js  StateBanner.js  Steps.js
crates/mtg/src/: ffi.rs  lib.rs
crates/mtg_engine/: Cargo.toml
crates/mtg_engine/src/: action.rs  card.rs  card_db.rs  components.rs  cost.rs  counters.rs  game.rs  ident.rs  lib.rs  mana_pool.rs  player.rs  pt.rs  queries.rs  target.rs  types.rs  zone.rs
crates/mtg_engine/src/components/: mod.rs  object.rs  player.rs
crates/mtg_engine/src/game/: casting.rs  combat.rs  game.rs  mod.rs  state_based_actions.rs  util.rs
crates/mtg_engine/src/object_db/: cards.json  mod.rs
crates/mtg_yew/: Cargo.toml  index.html
crates/mtg_yew/src/components/: mod.rs  structure.rs
crates/scratch/: Cargo.toml
crates/scratch/src/: main.rs
src/: action.rs  card.rs  components.rs  cost.rs  counters.rs  game.rs  ident.rs  keyword_ability.rs  main.rs  pt.rs  queries.rs  types.rs
