[package]
name = "mtg3"
version = "0.1.0"
authors = ["Lucien Greathouse <me@lpghatguy.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.0"
hecs = "0.7.1"
log = "0.4.14"
maplit = "1.0.2"
smol_str = "0.1.21"
