[package]
name = "mtg"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.7"
js-sys = "0.3.55"
log = "0.4.14"
mtg_engine = { path = "../mtg_engine" }
serde = { version = "1.0.132", features = ["derive"] }
wasm-bindgen = { version = "0.2.78", features = ["serde-serialize"] }
wasm-logger = "0.2.0"
