[package]
name = "mtg"
description = "wasm bindings for mtg_engine"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.7"
js-sys = "0.3.55"
log = "0.4.14"
mtg_engine = { path = "../mtg_engine" }
serde = { version = "1.0.133", features = ["derive"] }
serde-wasm-bindgen = "0.4.1"
wasm-bindgen = "0.2.78"
wasm-logger = "0.2.0"
