[package]
name = "mtg_engine"
version = "0.1.0"
authors = ["Lucien Greathouse <me@lpghatguy.com>"]
edition = "2021"

[dependencies]
getrandom = { version = "0.2.3", features = ["js"] }
hecs = { version = "0.7.3", features = ["serde"] }
log = "0.4.14"
maplit = "1.0.2"
rand = "0.8.4"
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.74"
smol_str = "0.1.21"
thunderdome = "0.5.0"
