[package]
name = "mtg_yew"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mtg_engine = { path = "../mtg_engine" }

log = "0.4.14"
stylist = { version = "0.10.0", features = ["yew", "yew_use_style"] }
wasm-logger = { version = "0.2.0" }
yew = "0.19.3"
once_cell = "1.9.0"
